Fix vertical alignment on icons

--- a/src/browser/styles/app.css
+++ b/src/browser/styles/app.css
@@ -142,3 +142,8 @@ li {
     font-size: 12px;
     font-weight: 500;
 }
+
+.icon {
+    vertical-align: middle;
+    padding: .25em;
+}
